Updated Cover Page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,24 @@
 
 <body>
     <!--    Cover Page  -->
-    <nav></nav>
+
+    <header>
+        <nav>
+            <ul>
+                <img src="#" alt="TT logo" />
+                <li>Get Involved</li>
+                <li>Challenges</li>
+                <li>Schedule</li>
+                <li>Sponsors</li>
+            </ul>
+            <img src="#" alt="mlh logo" />
+        </nav>
+    </header>
+
     <h1>TechTogether New York</h1>
+    <h4>Columbia University | October 15th-16th</h4>
+    <p>Come join us in welcoming Byte and their prehistoric friends this hacking season!</p>
+    <button>Register</button>
 
     <!--    Countdown   -->
 
