--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>TechTogether New York 2022</title>
 </head>
 
@@ -30,6 +31,55 @@
     <button>Register</button>
 
     <!--    Countdown   -->
+    <div id="countdown">
+        <h2 id="cd-header">Countdown to TechTogether New York:</h2>
+        <div id="clockdiv">
+            <div>
+                <span class="days" id="day"></span>
+                <div class="smalltext">Days</div>
+            </div>
+            <div>
+                <span class="hours" id="hour"></span>
+                <div class="smalltext">Hours</div>
+            </div>
+            <div>
+                <span class="minutes" id="minute"></span>
+                <div class="smalltext">Minutes</div>
+            </div>
+            <div>
+                <span class="seconds" id="second"></span>
+                <div class="smalltext">Seconds</div>
+            </div>
+        </div>
+
+        <div>
+            <script>
+                var deadline = new Date("Oct 23, 2022 00:00:00").getTime();
+
+                var x = setInterval(function () {
+
+                    var now = new Date().getTime();
+                    var t = deadline - now;
+                    var days = Math.floor(t / (1000 * 60 * 60 * 24));
+                    var hours = Math.floor((t % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                    var minutes = Math.floor((t % (1000 * 60 * 60)) / (1000 * 60));
+                    var seconds = Math.floor((t % (1000 * 60)) / 1000);
+                    document.getElementById("day").innerHTML = days;
+                    document.getElementById("hour").innerHTML = hours;
+                    document.getElementById("minute").innerHTML = minutes;
+                    document.getElementById("second").innerHTML = seconds;
+                    if (t < 0) {
+                        clearInterval(x);
+                        document.getElementById("demo").innerHTML = "TIME UP";
+                        document.getElementById("day").innerHTML = '0';
+                        document.getElementById("hour").innerHTML = '0';
+                        document.getElementById("minute").innerHTML = '0';
+                        document.getElementById("second").innerHTML = '0';
+                    }
+                }, 1000);
+            </script>
+        </div>
+    </div>
 
     <!--    About Us    -->
 
