--- a/index.html
+++ b/index.html
@@ -85,15 +85,20 @@
     <div id="aboutus">
         <aside>
             <h3>About Us</h3>
-            <p>TechTogether New York is one of the few gender-focused hackathons based out of New York serving people of marginalized genders. 
-                <br/>Our attendees are primarily high school, college, and bootcamp students in the tri-state area.
-                </p>
+            <p>TechTogether New York is one of the few gender-focused hackathons based out of New York serving people of
+                marginalized genders.
+                <br />Our attendees are primarily high school, college, and bootcamp students in the tri-state area.
+            </p>
         </aside>
         <aside>
             <h3>Frozen in Time: It’s n~ice~ 🧊 to be back!</h3>
-            <p>We are excited to welcome you to TechTogether New York 2022, in person at Columbia University from October 15-16th. 
-                <br/>Our mission is to empower all people of marginalzied genders by providing opportunities to gain valuable skills and explore tech in an inclusive, inspiring, and engaging environment. We hope to see you there!
-                </p> <!--add more info about event-->
+            <p>We are excited to welcome you to TechTogether New York 2022, in person at Columbia University from
+                October 15-16th.
+                <br />Our mission is to empower all people of marginalzied genders by providing opportunities to gain
+                valuable skills and explore tech in an inclusive, inspiring, and engaging environment. We hope to see
+                you there!
+            </p>
+            <!--add more info about event-->
         </aside>
     </div>
 
@@ -102,6 +107,14 @@
     <!--    FAQ     -->
 
     <!--    Sponsors    -->
+    <h3>Our Sponsors</h3>
+    <div id="sponsor1">Sponsor 1</div>
+    <div id="sponsor1">Sponsor 2</div>
+    <div id="sponsor1">Sponsor 3</div>
+    <br>
+    <div id="sponsor2">Sponsor 4</div>
+    <div id="sponsor2">Sponsor 5</div>
+    <div id="sponsor2">Sponsor 6</div>
 
     <!--    Footer      -->
     <div id="footer">
