--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>TechTogether New York 2022</title>
 </head>
@@ -85,21 +87,206 @@
     <div id="aboutus">
         <aside>
             <h3>About Us</h3>
-            <p>TechTogether New York is one of the few gender-focused hackathons based out of New York serving people of marginalized genders. 
-                <br/>Our attendees are primarily high school, college, and bootcamp students in the tri-state area.
-                </p>
+            <p>TechTogether New York is one of the few gender-focused hackathons based out of New York serving people of
+                marginalized genders.
+                <br />Our attendees are primarily high school, college, and bootcamp students in the tri-state area.
+            </p>
         </aside>
         <aside>
             <h3>Frozen in Time: It’s n~ice~ 🧊 to be back!</h3>
-            <p>We are excited to welcome you to TechTogether New York 2022, in person at Columbia University from October 15-16th. 
-                <br/>Our mission is to empower all people of marginalzied genders by providing opportunities to gain valuable skills and explore tech in an inclusive, inspiring, and engaging environment. We hope to see you there!
-                </p> <!--add more info about event-->
+            <p>We are excited to welcome you to TechTogether New York 2022, in person at Columbia University from
+                October 15-16th.
+                <br />Our mission is to empower all people of marginalzied genders by providing opportunities to gain
+                valuable skills and explore tech in an inclusive, inspiring, and engaging environment. We hope to see
+                you there!
+            </p>
+            <!--add more info about event-->
         </aside>
     </div>
 
     <!--    Get Involved    -->
+    <div class="my-5">
+        <h3>Get involved!</h3>
+        <div class="my-5 row">
+            <div class="col-md-3 offset-md-4">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">SPONSOR</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+                            accusantium,
+                            ex quos rem, culpa recusandae amet repudiandae, at quidem eos doloribus nemo dolorem quo.
+                        </p>
+                        <button type="button" class="btn btn-info">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 offset-md-1">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">JUDGE</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+                            accusantium,
+                            ex quos rem, culpa recusandae amet repudiandae, at quidem eos doloribus nemo dolorem quo.
+                        </p>
+                        <button type="button" class="btn btn-info">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="my-5 row">
+            <div class="col-md-3 offset-md-2">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">MENTOR</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+                            accusantium,
+                            ex quos rem, culpa recusandae amet repudiandae, at quidem eos doloribus nemo dolorem quo.
+                        </p>
+                        <button type="button" class="btn btn-info">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 offset-md-1">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">WORKSHOP HOST</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+                            accusantium,
+                            ex quos rem, culpa recusandae amet repudiandae, at quidem eos doloribus nemo dolorem quo.
+                        </p>
+                        <button type="button" class="btn btn-info">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!--    FAQ     -->
+    <div class="my-5">
+        <h3 class="text-center">No Dumb Questions</h3>
+        <!-- first row -->
+        <div class="mt-5 row">
+            <div class="col-md-4 offset-md-2">
+                <p>
+                    <button class="btn btn-info w-100" type="button" data-bs-toggle="collapse" data-bs-target="#first"
+                        aria-expanded="false" aria-controls="first">
+                        What is a Hackathon?
+                    </button>
+                </p>
+                <div class="collapse" id="first">
+                    <div class="card card-body">
+                        Hackthon is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione distinctio
+                        aliquam
+                        repellat, libero, praesentium impedit accusantium.
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <p>
+                    <button class="btn btn-info w-100" type="button" data-bs-toggle="collapse" data-bs-target="#second"
+                        aria-expanded="false" aria-controls="second">
+                        What skills do I need?
+                    </button>
+                </p>
+                <div class="collapse" id="second">
+                    <div class="card card-body">
+                        No previous experiences needed!
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- second row -->
+        <div class="my-1 row">
+            <div class="col-md-4 offset-md-2">
+                <p>
+                    <button class="btn btn-info w-100" type="button" data-bs-toggle="collapse" data-bs-target="#third"
+                        aria-expanded="false" aria-controls="third">
+                        Where do I submit my project?
+                    </button>
+                </p>
+                <div class="collapse" id="third">
+                    <div class="card card-body">
+                        Hackthon is a Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione distinctio.
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <p>
+                    <button class="btn btn-info w-100" type="button" data-bs-toggle="collapse" data-bs-target="#fourth"
+                        aria-expanded="false" aria-controls="fourth">
+                        Is there a cost to attend?
+                    </button>
+                </p>
+                <div class="collapse" id="fourth">
+                    <div class="card card-body">
+                        No cost at all! Just bring your brilliant ideas!
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- third row -->
+        <div class="my-1 row">
+            <div class="col-md-4 offset-md-2">
+                <p>
+                    <button class="btn btn-info w-100" type="button" data-bs-toggle="collapse" data-bs-target="#fifth"
+                        aria-expanded="false" aria-controls="fifth">
+                        Will there be swag and prizes?
+                    </button>
+                </p>
+                <div class="collapse" id="fifth">
+                    <div class="card card-body">
+                        Yes! And free food as well!
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <p>
+                    <button class="btn btn-info w-100" type="button" data-bs-toggle="collapse" data-bs-target="#sixth"
+                        aria-expanded="false" aria-controls="sixth">
+                        How do I find a team to join?
+                    </button>
+                </p>
+                <div class="collapse" id="sixth">
+                    <div class="card card-body">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- fourth row -->
+        <div class="my-1 row">
+            <div class="col-md-4 offset-md-2">
+                <p>
+                    <button class="btn btn-info w-100" type="button" data-bs-toggle="collapse" data-bs-target="#seventh"
+                        aria-expanded="false" aria-controls="seventh">
+                        How do I find a mentor to help?
+                    </button>
+                </p>
+                <div class="collapse" id="seventh">
+                    <div class="card card-body">
+                        We will host workshops and ...
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <p>
+                    <button class="btn btn-info w-100" type="button" data-bs-toggle="collapse" data-bs-target="#eighth"
+                        aria-expanded="false" aria-controls="eighth">
+                        I have more questions!
+                    </button>
+                </p>
+                <div class="collapse" id="eighth">
+                    <div class="card card-body">
+                        Feel free to contact us via ...
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!--    Sponsors    -->
 
@@ -113,6 +300,13 @@
         <button>twitter</button>
     </div>
 
+    <!-- Bootstrap script -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
