--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>TechTogether New York 2022</title>
 </head>
 
@@ -52,34 +53,6 @@
                 <span class="seconds" id="second"></span>
                 <div class="smalltext">Seconds</div>
             </div>
-        </div>
-
-        <div>
-            <script>
-                var deadline = new Date("Oct 23, 2022 00:00:00").getTime();
-
-                var x = setInterval(function () {
-
-                    var now = new Date().getTime();
-                    var t = deadline - now;
-                    var days = Math.floor(t / (1000 * 60 * 60 * 24));
-                    var hours = Math.floor((t % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                    var minutes = Math.floor((t % (1000 * 60 * 60)) / (1000 * 60));
-                    var seconds = Math.floor((t % (1000 * 60)) / 1000);
-                    document.getElementById("day").innerHTML = days;
-                    document.getElementById("hour").innerHTML = hours;
-                    document.getElementById("minute").innerHTML = minutes;
-                    document.getElementById("second").innerHTML = seconds;
-                    if (t < 0) {
-                        clearInterval(x);
-                        document.getElementById("demo").innerHTML = "TIME UP";
-                        document.getElementById("day").innerHTML = '0';
-                        document.getElementById("hour").innerHTML = '0';
-                        document.getElementById("minute").innerHTML = '0';
-                        document.getElementById("second").innerHTML = '0';
-                    }
-                }, 1000);
-            </script>
         </div>
     </div>
 
