--- a/index.html
+++ b/index.html
@@ -16,15 +16,39 @@
     <!--    Cover Page  -->
 
     <header>
-        <nav>
-            <ul>
-                <img src="#" alt="TT logo" />
-                <li>Get Involved</li>
-                <li>Challenges</li>
-                <li>Schedule</li>
-                <li>Sponsors</li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                <img src="TechTogether-NewYork2022/assets/techtogetherchapter-logowhite-newyork.png" width="30"
+                    height="30" alt="techtogether logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Get Involved<span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Challenges</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Schedule</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sponsors</a>
+                    </li>
+            </div>
+            </li>
             </ul>
-            <img src="#" alt="mlh logo" />
+            <div class="form-inline my-2 my-lg-0">
+                <a class="navbar-brand" href="#">
+                    <img src="TechTogether-NewYork2022/assets/techtogetherchapter-logowhite-newyork.png" width="30"
+                        height="30" alt="mlh logo">
+                </a>
+            </div>
         </nav>
     </header>
 
