included bg image in assets folder and fixed html

--- a/index.html
+++ b/index.html
@@ -14,43 +14,45 @@
 
 <body>
     <!--    Cover Page  -->
-
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">
-                <img src="TechTogether-NewYork2022/assets/techtogetherchapter-logowhite-newyork.png" width="30"
-                    height="30" alt="techtogether logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Get Involved<span class="sr-only"></span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Challenges</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Schedule</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sponsors</a>
-                    </li>
-            </div>
-            </li>
-            </ul>
-            <div class="form-inline my-2 my-lg-0">
+    <section id="cover-page">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">
                     <img src="TechTogether-NewYork2022/assets/techtogetherchapter-logowhite-newyork.png" width="30"
-                        height="30" alt="mlh logo">
+                        height="30" alt="techtogether logo">
                 </a>
-            </div>
-        </nav>
-    </header>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Get Involved<span class="sr-only"></span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Challenges</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Schedule</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sponsors</a>
+                        </li>
+                </div>
+                </li>
+                </ul>
+                <div class="form-inline my-2 my-lg-0">
+                    <a class="navbar-brand" href="#">
+                        <img src="TechTogether-NewYork2022/assets/techtogetherchapter-logowhite-newyork.png" width="30"
+                            height="30" alt="mlh logo">
+                    </a>
+                </div>
+            </nav>
+        </header>
+    </section>
 
     <h1>TechTogether New York</h1>
     <h4>Columbia University | October 15th-16th</h4>
