Working on including background image
Still a work in progress

--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
                 </div>
             </nav>
         </header>
+        <div id="titles">
+            <h1>TechTogether New York</h1>
+            <h4>Columbia University | October 15th-16th</h4>
+            <p>Come join us in welcoming Byte and their prehistoric friends this hacking season!</p>
+            <button>Register</button>
+        </div>
     </section>
 
-    <h1>TechTogether New York</h1>
-    <h4>Columbia University | October 15th-16th</h4>
-    <p>Come join us in welcoming Byte and their prehistoric friends this hacking season!</p>
-    <button>Register</button>
+
 
     <!--    Countdown   -->
     <div id="countdown">
