--- a/index.html
+++ b/index.html
@@ -89,27 +89,37 @@
 
         <!--    About Us    -->
         <div id="aboutus">
-            <aside>
-                <h3>About Us</h3>
-                <p>TechTogether New York is one of the few gender-focused hackathons based out of New York serving
-                    people of
-                    marginalized genders.
-                    <br />Our attendees are primarily high school, college, and bootcamp students in the tri-state area.
-                </p>
-            </aside>
-            <aside>
-                <h3>Frozen in Time: It’s n~ice~ 🧊 to be back!</h3>
-                <p>We are excited to welcome you to TechTogether New York 2022, in person at Columbia University from
-                    October 15-16th.
-                    <br />Our mission is to empower all people of marginalized genders by providing opportunities to
-                    gain
-                    valuable skills and explore tech in an inclusive, inspiring, and engaging environment. We hope to
-                    see
-                    you there!
-                </p>
-                <!--add more info about event-->
-            </aside>
+            
+    <!--    About Us    -->
+    <div id="aboutus">
+        <div class="my-5 row">
+            <div class="col-md-3 offset-md-2">
+                <div class="card theme-cards" style="width: 22rem;">
+                    <div class="card-body">
+                        <h5 class="card-title mt-3"><b>About Us</b></h5>
+                        <p class="card-text mt-3">TechTogether New York is one of the few gender-focused hackathons based out of New York serving people of
+                            marginalized genders.
+                            <br />Our attendees are primarily high school, college, and bootcamp students in the tri-state area.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 offset-md-1">
+                <div class="card theme-cards" style="width: 30rem;">
+                    <div class="card-body">
+                        <h5 class="card-title mt-3"><b>Frozen in Time: It’s n~ice~ 🧊 to be back!</b></h5>
+                        <p class="card-text mt-3">We are excited to welcome you to TechTogether New York 2022, in person at Columbia University from
+                            October 15-16th.
+                            <br />Our mission is to empower all people of marginalzied genders by providing opportunities to gain
+                            valuable skills and explore tech in an inclusive, inspiring, and engaging environment. We hope to see
+                            you there!
+                        </p>
+                        <!--add more info about event-->
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
 
         <!--    Get Involved    -->
         <div class="my-5 section-padding">
