Formatted the sponsors section
Ready to add sponsorship logos whenever we receive them

--- a/index.html
+++ b/index.html
@@ -323,14 +323,29 @@
         </div>
 
         <!--    Sponsors    -->
-        <h3>Our Sponsors</h3>
-        <div id="sponsor1">Sponsor 1</div>
-        <div id="sponsor1">Sponsor 2</div>
-        <div id="sponsor1">Sponsor 3</div>
-        <br>
-        <div id="sponsor2">Sponsor 4</div>
-        <div id="sponsor2">Sponsor 5</div>
-        <div id="sponsor2">Sponsor 6</div>
+        <h3 id="sponsors" class="text-center">Our Sponsors</h3>
+        <div class="row text-center" id="sponsor-1">
+            <div class="column" id="sponsor-col">
+                <img src="#" alt="sponsor" style="width:100%">
+            </div>
+            <div class="column" id="sponsor-col">
+                <img src="#" alt="sponsor" style="width:100%">
+            </div>
+            <div class="column" id="sponsor-col">
+                <img src="#" alt="sponsor" style="width:100%">
+            </div>
+        </div>
+        <div class="row text-center" id="sponsor-2">
+            <div class="column" id="sponsor-col">
+                <img src="#" alt="sponsor" style="width:100%">
+            </div>
+            <div class="column" id="sponsor-col">
+                <img src="#" alt="sponsor" style="width:100%">
+            </div>
+            <div class="column" id="sponsor-col">
+                <img src="#" alt="sponsor" style="width:100%">
+            </div>
+        </div>
 
         <!--    Footer      -->
         <div id="footer">
