--- a/index.html
+++ b/index.html
@@ -13,45 +13,47 @@
 </head>
 
 <body>
-    <header>
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark py-0">
-            <a class="navbar-brand" href="#">
-                <img src="./assets/techtogetherchapter-logowhite-newyork.png" width="150" height="50"
-                    alt="techtogether logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Get Involved</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Challenges</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Schedule</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sponsors</a>
-                    </li>
-            </div>
-            </li>
-            </ul>
-            <div class="form-inline my-2 my-lg-0">
-                <a class="navbar-brand" href="#">
-                    <img id='mlh' src="./assets/mlh banner.svg" width="200" height="150" alt="mlh logo">
-                </a>
-            </div>
-        </nav>
-    </header>
     <!--    Cover Page  -->
     <section id="cover-page">
+        <header>
+            <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <a class="navbar-brand" href="#">
+                        <img src="./assets/techtogetherchapter-logowhite-newyork.png" width="150" height="50"
+                            alt="techtogether logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#" style="color: white">Get Involved<span
+                                        class="sr-only"></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" style="color: white">Challenges</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" style="color: white">Schedule</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" style="color: white">Sponsors</a>
+                            </li>
+                    </div>
+                    </li>
+                    </ul>
+                    <div class="form-inline my-2 my-lg-0">
+                        <a class="navbar-brand" href="#">
+                            <img src="assets/mlh banner.svg" width="150" height="120" alt="mlh logo">
+                        </a>
+                    </div>
+                </nav>
+            </div>
+        </header>
         <div id="titles" class="mt-5 pt-5">
             <h1>TechTogether New York</h1>
             <h4>Columbia University | October 15th-16th</h4>
