linked register button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             <h1>TechTogether New York</h1>
             <h4>Columbia University | October 15th-16th</h4>
             <p>Come join us in welcoming Byte and their prehistoric friends this hacking season!</p>
-            <button type="button" class="btn btn-light">Register</button>
+            <button
+                onclick="window.location.href='https://organize.mlh.io/participants/events/8356-techtogether-new-york';"
+                type="button" class="btn btn-light">Register</button>
         </div>
     </section>
 
