Styled register btn

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p>Come join us in welcoming Byte and their prehistoric friends this hacking season!</p>
             <button
                 onclick="window.location.href='https://organize.mlh.io/participants/events/8356-techtogether-new-york';"
-                type="button" class="btn btn-light">Register</button>
+                type="button" id='register-btn' class="btn btn-primary"><span>Register</span></button>
         </div>
     </section>
 
