about us + footer
fixed theme description and worked on footer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Font Awesome 5.15.1 CSS (social media icons) -->
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -94,25 +97,24 @@
     <div id="aboutus">
         <div class="my-5 row">
             <div class="col-md-3 offset-md-2">
-                <div class="card theme-cards" style="width: 22rem;">
+                <div class="card theme-cards" style="width: 28rem;">
                     <div class="card-body">
                         <h5 class="card-title mt-3"><b>About Us</b></h5>
                         <p class="card-text mt-3">TechTogether New York is one of the few gender-focused hackathons based out of New York serving people of
-                            marginalized genders.
+                            marginalized genders. Our mission is to empower all people of marginalzied genders by providing opportunities to gain
+                            valuable skills and explore tech in an inclusive, inspiring, and engaging environment.
                             <br />Our attendees are primarily high school, college, and bootcamp students in the tri-state area.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 offset-md-1">
-                <div class="card theme-cards" style="width: 30rem;">
+                <div class="card theme-cards" style="width: 45rem;">
                     <div class="card-body">
                         <h5 class="card-title mt-3"><b>Frozen in Time: It’s n~ice~ 🧊 to be back!</b></h5>
-                        <p class="card-text mt-3">We are excited to welcome you to TechTogether New York 2022, in person at Columbia University from
-                            October 15-16th.
-                            <br />Our mission is to empower all people of marginalzied genders by providing opportunities to gain
-                            valuable skills and explore tech in an inclusive, inspiring, and engaging environment. We hope to see
-                            you there!
+                        <p class="card-text mt-3">We are excited to welcome you to TechTogether New York 2022, which will take place in person at Columbia University from
+                            October 15-16th.  
+                            <br /> Join TechTogether New York in welcoming Byte and their prehistoric friends this hacking season while they cool down from an ice cold season! Come down for ice cream icebreakers and dinosmores. We hope you don’t crack under pressure over the weekend! Help us hack for Climate Change and try your hand at the TRYceratop first time hack challenges. We can’t wait to meet you!
                         </p>
                         <!--add more info about event-->
                     </div>
@@ -311,27 +313,31 @@
             </div>
         </div>
         </div>
-
-        <!--    Sponsors    -->
-        <h3>Our Sponsors</h3>
-        <div id="sponsor1">Sponsor 1</div>
-        <div id="sponsor1">Sponsor 2</div>
-        <div id="sponsor1">Sponsor 3</div>
-        <br>
-        <div id="sponsor2">Sponsor 4</div>
-        <div id="sponsor2">Sponsor 5</div>
-        <div id="sponsor2">Sponsor 6</div>
-
-        <!--    Footer      -->
-        <div id="footer">
-            <h5>Keep in touch!</h5>
-            <h5>Follow us on social media</h5>
-            <button>instagram</button>
-            <button>facebook</button>
-            <button>linkedin</button>
-            <button>twitter</button>
+    <!--footer-->
+    <div class="footer row">
+        <div class="wrapper col-5">
+            <a href="https://www.facebook.com/techtogethernewyork" class="icon facebook">
+                <div class="tooltip">Facebook</div>
+                <span><i class="fab fa-facebook-f"></i></span>
+            </a>
+            <a href="#" class="icon twitter">
+                <div class="tooltip">Twitter</div>
+                <span><i class="fab fa-twitter"></i></span>
+            </a>
+            <a href="https://www.instagram.com/techtogethernewyork/" class="icon instagram">
+                <div class="tooltip">Instagram</div>
+                <span><i class="fab fa-instagram"></i></span>
+            </a>
+            <a href="https://www.linkedin.com/company/techtogether-new-york/mycompany/" class="icon linkedin">
+                <div class="tooltip">Linkedin</div>
+                <span><i class="fab fa-linkedin"></i></span>
+            </a>
+            Keep in touch! Follow us on social media!
+            </div>
         </div>
-
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            <a class="text-white" href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">Code of Conduct</a>
+        </div>
     </section>
 
     <!-- Bootstrap script -->
