Reformatted navbar and linked each nav-link

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#" style="color: white">Get Involved<span
+                                <a class="nav-link" href="#aboutus" style="color: white">About<span
                                         class="sr-only"></span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" style="color: white">Challenges</a>
+                                <a class="nav-link" href="#get-involved" style="color: white">Get Involved</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" style="color: white">Schedule</a>
+                                <a class="nav-link" href="#faq" style="color: white">FAQ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" style="color: white">Sponsors</a>
+                                <a class="nav-link" href="#sponsors" style="color: white">Sponsors</a>
                             </li>
                     </div>
                     </li>
@@ -127,7 +127,7 @@
 
         <!--    Get Involved    -->
         <div class="my-5 section-padding">
-            <h3>Get involved!</h3>
+            <h3 id="get-involved">Get involved!</h3>
             <div class="my-5 row">
                 <div class="col-md-3 offset-md-4">
                     <div class="card get-involved-cards" style="width: 18rem;">
@@ -196,7 +196,7 @@
 
         <!--    FAQ     -->
         <div class="my-5 section-padding">
-            <h3 class="text-center">No Dumb Questions</h3>
+            <h3 id="faq" class="text-center">No Dumb Questions</h3>
             <!-- first row -->
             <div class="mt-5 row">
                 <div class="col-md-4 offset-md-2">
