Added placeholder sponsors

--- a/index.html
+++ b/index.html
@@ -327,24 +327,24 @@
         <h3 id="sponsors" class="text-center">Our Sponsors</h3>
         <div class="row text-center" id="sponsor-1">
             <div class="column" id="sponsor-col">
-                <img src="#" alt="sponsor" style="width:100%">
+                <img src="./sponsor logos/C1-logo.png" alt="sponsor" style="width:50%">
             </div>
             <div class="column" id="sponsor-col">
-                <img src="#" alt="sponsor" style="width:100%">
+                <img src="./sponsor logos/bu-logo.png" alt="sponsor" style="width:50%">
             </div>
             <div class="column" id="sponsor-col">
-                <img src="#" alt="sponsor" style="width:100%">
+                <img src="./sponsor logos/balsamiq-logo.png" alt="sponsor" style="width:50%">
             </div>
         </div>
         <div class="row text-center" id="sponsor-2">
             <div class="column" id="sponsor-col">
-                <img src="#" alt="sponsor" style="width:100%">
+                <img src="./sponsor logos/Microsoft-logo_rgb_c-gray 1.png" alt="sponsor" style="width:50%">
             </div>
             <div class="column" id="sponsor-col">
-                <img src="#" alt="sponsor" style="width:100%">
+                <img src="./sponsor logos/HackathonMentors_RGB.png" alt="sponsor" style="width:50%">
             </div>
             <div class="column" id="sponsor-col">
-                <img src="#" alt="sponsor" style="width:100%">
+                <img src="./sponsor logos/Robinhood-logo-color.png" alt="sponsor" style="width:50%">
             </div>
         </div>
 
