--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
 
         <!--    Get Involved    -->
         <div class="my-5 section-padding">
-            <h3 id="get-involved">Get involved!</h3>
-            <img src="./assets/byte.JPG" alt="" id="byte-involved">
+            <img src="./assets/involved.PNG" alt="" id="get-involved-words">
+            <h3 id="get-involved"> </h3>
+            <img src="./assets/byte.PNG" alt="" id="byte-involved">
             <div class="my-5 row">
                 <div class="col-md-3 offset-md-4">
                     <div class="card get-involved-cards" style="width: 18rem;">
@@ -209,7 +210,7 @@
                     <p>
                         <button class="btn btn-info w-100 qa" type="button" data-bs-toggle="collapse"
                             data-bs-target="#first" aria-expanded="false" aria-controls="first">
-                            What is a Hackathon?
+                            <img src="./assets/egg.PNG" class="egg"> What is a Hackathon?
                         </button>
                     </p>
                     <div class="collapse" id="first">
@@ -226,7 +227,7 @@
                     <p>
                         <button class="btn btn-info w-100 qa" type="button" data-bs-toggle="collapse"
                             data-bs-target="#second" aria-expanded="false" aria-controls="second">
-                            What skills do I need?
+                            <img src="./assets/egg.PNG" class="egg"> What skills do I need?
                         </button>
                     </p>
                     <div class="collapse" id="second">
@@ -242,7 +243,7 @@
                     <p>
                         <button class="btn btn-info w-100 qa" type="button" data-bs-toggle="collapse"
                             data-bs-target="#third" aria-expanded="false" aria-controls="third">
-                            Where do I submit my project?
+                            <img src="./assets/egg.PNG" class="egg"> Where do I submit my project?
                         </button>
                     </p>
                     <div class="collapse" id="third">
@@ -261,7 +262,7 @@
                     <p>
                         <button class="btn btn-info w-100 qa" type="button" data-bs-toggle="collapse"
                             data-bs-target="#fourth" aria-expanded="false" aria-controls="fourth">
-                            Is there a cost to attend?
+                            <img src="./assets/egg.PNG" class="egg"> Is there a cost to attend?
                         </button>
                     </p>
                     <div class="collapse" id="fourth">
@@ -277,7 +278,7 @@
                     <p>
                         <button class="btn btn-info w-100 qa" type="button" data-bs-toggle="collapse"
                             data-bs-target="#fifth" aria-expanded="false" aria-controls="fifth">
-                            Will there be swag and prizes?
+                            <img src="./assets/egg.PNG" class="egg"> Will there be swag and prizes?
                         </button>
                     </p>
                     <div class="collapse" id="fifth">
@@ -291,7 +292,7 @@
                     <p>
                         <button class="btn btn-info w-100 qa" type="button" data-bs-toggle="collapse"
                             data-bs-target="#sixth" aria-expanded="false" aria-controls="sixth">
-                            How do I find a team to join?
+                            <img src="./assets/egg.PNG" class="egg"> How do I find a team to join?
                         </button>
                     </p>
                     <div class="collapse" id="sixth">
@@ -313,7 +314,7 @@
                     <p>
                         <button class="btn btn-info w-100 qa" type="button" data-bs-toggle="collapse"
                             data-bs-target="#seventh" aria-expanded="false" aria-controls="seventh">
-                            How do I find a mentor to help?
+                            <img src="./assets/egg.PNG" class="egg"> How do I find a mentor to help?
                         </button>
                     </p>
                     <div class="collapse" id="seventh">
@@ -329,7 +330,7 @@
                     <p>
                         <button class="btn btn-info w-100 qa" type="button" data-bs-toggle="collapse"
                             data-bs-target="#eighth" aria-expanded="false" aria-controls="eighth">
-                            I have more questions!
+                            <img src="./assets/egg.PNG" class="egg"> I have more questions!
                         </button>
                     </p>
                     <div class="collapse" id="eighth">
