working on mlh logo

--- a/index.html
+++ b/index.html
@@ -51,14 +51,12 @@
                     </div>
                     </li>
                     </ul>
-                    <div class="form-inline my-2 my-lg-0">
-                        <a class="navbar-brand" href="#">
-                            <img src="assets/mlh banner.svg" width="150" height="120" alt="mlh logo">
-                        </a>
-                    </div>
                 </nav>
             </div>
         </header>
+        <div id="content-mlh" class="form-inline my-2 my-lg-0">
+            <img src="assets/mlh banner.svg" width="150" height="120" alt="mlh logo">
+        </div>
         <div id="titles" class="mt-5 pt-5">
             <h1>TechTogether New York</h1>
             <h4>Columbia University | November 12th-13th</h4>
