Added flying dino png

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
             </div>
         </div>
 
+        <img src="./assets/flying_dino.png" alt="" id="flying-dino">
+
         <!--    About Us    -->
         <div id="aboutus">
             <div class="my-5 row">
