added dino prints png

--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
             </div>
         </div>
 
+        <div id="prints">
+            <img src="./assets/dino-prints.png" alt="" id="dino-prints">
+        </div>
+
         <!--    FAQ     -->
         <div class="my-5 section-padding">
             <h3 id="faq" class="text-center">No Dumb Questions</h3>
