added emailto and images

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
         <!--    About Us    -->
         <div id="aboutus">
             <img src="./assets/fly_dino.png" id="fly-dino" alt="">
+            <div></div>
+            <img src="./assets/drop_egg.png" alt="" id="egg-drop">
             <div class="my-5 row">
                 <div class="col-md-3 offset-md-2">
                     <div class="card theme-cards" style="width: 22rem;">
@@ -138,7 +140,7 @@
             <h3 id="get-involved"> </h3>
             <img src="./assets/byte.PNG" alt="" id="byte-involved">
             <div class="my-5 row">
-                <div class="col-md-3 offset-md-4">
+                <div class="col-sm-12 col-md-12 col-lg-3 offset-lg-4 offset-md-4">
                     <div class="card get-involved-cards" style="width: 20rem;">
                         <div class="card-body text-center">
                             <h5 class="card-title mt-3"><b>SPONSOR</b></h5>
@@ -147,13 +149,13 @@
                                 allow for diverse engagement, branding, and recruitment
                                 opportunities with young hackers across the New York and New Jersey.
                             </p>
-                            <a class="btn btn-info get-involved-buttons"
-                                href="https://majorleaguehacking.typeform.com/to/A8iaouii" role="button"><b>Email
+                            <a class="btn btn-info get-involved-buttons" href="mailto:info@techtogether.io"
+                                role="button"><b>Email
                                     Us</b>🙋‍♀️</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 offset-md-1">
+                <div class="col-sm-12 col-md-12 col-lg-3 offset-lg-1 offset-md-4">
                     <div class="card get-involved-cards" style="width: 20rem;">
                         <div class="card-body text-center">
                             <h5 class="card-title mt-3"><b>JUDGE</b></h5>
@@ -169,7 +171,7 @@
                 </div>
             </div>
             <div class="my-5 row">
-                <div class="col-md-3 offset-md-2">
+                <div class="col-sm-12 col-md-12 col-lg-3 offset-lg-2 offset-md-4">
                     <div class="card get-involved-cards" style="width: 20rem;">
                         <div class="card-body text-center">
                             <h5 class="card-title mt-3"><b>MENTOR</b></h5>
@@ -183,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 offset-md-1">
+                <div class="col-sm-12 col-md-12 col-lg-3 offset-lg-1 offset-md-4">
                     <div class="card get-involved-cards" style="width: 20rem;">
                         <div class="card-body text-center">
                             <h5 class="card-title mt-3"><b>WORKSHOP HOST / PANELIST</b></h5>
