added microsoft and capital one

--- a/index.html
+++ b/index.html
@@ -364,10 +364,10 @@
         </div>
         <div class="row text-center" id="sponsor-2">
             <div class="column" id="sponsor-col">
-                <img src="./sponsor logos/Microsoft-logo_rgb_c-gray 1.png" alt="sponsor" style="width:50%">
+                <img src="./sponsor logos/microsoft_azure_logo 2.png" alt="sponsor" style="width: 50%;">
             </div>
             <div class="column" id="sponsor-col">
-                <img src="./sponsor logos/HackathonMentors_RGB.png" alt="sponsor" style="width:50%">
+                <img src="./sponsor logos/C1-logo.png" alt="sponsor" style="width:50%">
             </div>
             <div class="column" id="sponsor-col">
                 <img src="./sponsor logos/Robinhood-logo-color.png" alt="sponsor" style="width:50%">
