--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
                             <h5 class="card-title mt-3"><b>About Us</b></h5>
                             <p class="card-text mt-3">TechTogether New York is one of the few gender-focused
                                 hackathons based out of New York serving people of
-                                marginalized genders. Our mission is to empower all people of marginalized genders by providing
-                                opportunities to gain valuable skills and explore tech in an inclusive, inspiring, and engaging
+                                marginalized genders. Our mission is to empower all people of marginalized genders by
+                                providing
+                                opportunities to gain valuable skills and explore tech in an inclusive, inspiring, and
+                                engaging
                                 environment.
                                 <br />Our attendees are primarily high school, college, and bootcamp students in the
                                 tri-state area.
@@ -123,9 +125,12 @@
                             <h5 class="card-title mt-3"><b>Frozen in Time: It’s n~ice~ 🧊 to be back!</b></h5>
                             <p class="card-text mt-3">We are excited to welcome you to TechTogether New York 2022,
                                 in person at Columbia University from November 12-13th.
-                                <br />Join TechTogether New York in welcoming Byte and their prehistoric friends this hacking season while
-                                they cool down from an ice cold season! Come down for ice cream icebreakers and dinosmores. We hope you don't 
-                                crack under pressure over the weekend! Help us hack for Climate Change and try your hand at the TRYceratop 
+                                <br />Join TechTogether New York in welcoming Byte and their prehistoric friends this
+                                hacking season while
+                                they cool down from an ice cold season! Come down for ice cream icebreakers and
+                                dinosmores. We hope you don't
+                                crack under pressure over the weekend! Help us hack for Climate Change and try your hand
+                                at the TRYceratop
                                 first time hack challenges. We can't wait to meet you!
                             </p>
                         </div>
@@ -353,18 +358,24 @@
         <h3 id="sponsors" class="text-center">Our Sponsors</h3>
         <div class="row text-center" id="sponsor-1">
             <div class="column" id="sponsor-col">
-                <img src="./sponsor logos/mlh-logo-color.svg" alt="sponsor" style="width:50%">
+                <a href="https://mlh.io/">
+                    <img src="./sponsor logos/mlh-logo-color.svg" alt="sponsor" style="width:50%">
+                </a>
             </div>
             <div class="column" id="sponsor-col">
                 <img src="./sponsor logos/bu-logo.png" alt="sponsor" style="width:50%">
             </div>
             <div class="column" id="sponsor-col">
-                <img src="./sponsor logos/balsamiq-logo.png" alt="sponsor" style="width:50%">
+                <a href="https://balsamiq.com/wireframes/">
+                    <img src="./sponsor logos/balsamiq-logo.png" alt="sponsor" style="width:50%">
+                </a>
             </div>
         </div>
         <div class="row text-center" id="sponsor-2">
             <div class="column" id="sponsor-col">
-                <img src="./sponsor logos/microsoft_azure_logo 2.png" alt="sponsor" style="width: 50%;">
+                <a href="https://azure.microsoft.com/en-us/free/students/?WT.mc_id=academic-0000-cxa">
+                    <img src="./sponsor logos/microsoft_azure_logo 2.png" alt="sponsor" style="width: 50%;">
+                </a>
             </div>
             <div class="column" id="sponsor-col">
                 <img src="./sponsor logos/C1-logo.png" alt="sponsor" style="width:50%">
