Added responsiveness to my sections
Used media queries

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 
         </header>
         <div id="content-mlh" class="form-inline my-2 my-lg-0">
-            <img src="assets/mlh banner.svg" width="150" height="120" alt="mlh logo">
+            <img id="mlh" src="assets/mlh banner.svg" width="150" height="120" alt="mlh logo">
         </div>
+
         <div id="titles" class="mt-5 pt-5">
             <h1>TechTogether New York</h1>
             <h4>Columbia University | November 12th-13th</h4>
@@ -74,6 +75,7 @@
                 onclick="window.location.href='https://organize.mlh.io/participants/events/8356-techtogether-new-york';"
                 type="button" id='register-btn' class="btn btn-primary"><span>Register</span></button>
         </div>
+
 
     </section>
 
