--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    aria-label="Toggle navigation" style="border-color: white;">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
