fixed the position of byte

--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@
 
         <!--    Get Involved    -->
         <div class="my-5 section-padding">
-            <img src="./assets/involved.PNG" alt="" id="get-involved-words">
-            <h3 id="get-involved"> </h3>
-            <img src="./assets/byte.PNG" alt="" id="byte-involved">
+            <div id="byte-position">
+                <img src="./assets/involved.PNG" alt="" id="get-involved-words">
+                <h3 id="get-involved"> </h3>
+                <img src="./assets/byte.PNG" alt="" id="byte-involved">
+            </div>
             <div class="my-5 row">
                 <div class="col-sm-12 col-md-12 col-lg-3 offset-2 offset-sm-3 offset-lg-4 offset-md-4 responsive-cards">
                     <div class="card get-involved-cards" style="width: 20rem;">
