Removed c1, bu, and rh sponsors

--- a/index.html
+++ b/index.html
@@ -367,7 +367,9 @@
                 </a>
             </div>
             <div class="column" id="sponsor-col">
-                <img src="./sponsor logos/bu-logo.png" alt="sponsor" style="width:50%">
+                <a href="https://azure.microsoft.com/en-us/free/students/?WT.mc_id=academic-0000-cxa">
+                    <img src="./sponsor logos/microsoft_azure_logo 2.png" alt="sponsor" style="width: 50%;">
+                </a>
             </div>
             <div class="column" id="sponsor-col">
                 <a href="https://balsamiq.com/wireframes/">
@@ -375,19 +377,15 @@
                 </a>
             </div>
         </div>
-        <div class="row text-center" id="sponsor-2">
-            <div class="column" id="sponsor-col">
-                <a href="https://azure.microsoft.com/en-us/free/students/?WT.mc_id=academic-0000-cxa">
-                    <img src="./sponsor logos/microsoft_azure_logo 2.png" alt="sponsor" style="width: 50%;">
-                </a>
-            </div>
+        <!-- <div class="row text-center" id="sponsor-2">
+           
             <div class="column" id="sponsor-col">
                 <img src="./sponsor logos/C1-logo.png" alt="sponsor" style="width:50%">
             </div>
             <div class="column" id="sponsor-col">
                 <img src="./sponsor logos/Robinhood-logo-color.png" alt="sponsor" style="width:50%">
             </div>
-        </div>
+        </div> -->
 
 
         <!--footer-->
