--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <img src="./assets/fly_dino.png" id="fly-dino" alt="">
             <div></div>
             <img src="./assets/drop_egg.png" alt="" id="egg-drop">
-            <div class="my-5 row">
-                <div class="col-md-3 offset-md-2">
-                    <div class="card theme-cards" style="width: 22rem;">
+            <div class="my-5 row"> <!--<div class="col-sm-12 col-md-12 col-lg-3 offset-lg-1 offset-md-4">-->
+                <div class="col-sm-11 col-md-5 offset-md-2 offset-sm-1" style="width: 22rem; margin-top: 0rem;">
+                    <div class="card about-cards" >
                         <div class="card-body">
                             <h5 class="card-title mt-3"><b>About Us</b></h5>
                             <p class="card-text mt-3">TechTogether New York is one of the few gender-focused
@@ -122,8 +122,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 offset-md-1">
-                    <div class="card theme-cards" style="width: 30rem; margin-top: 15rem;">
+                <div class="col-sm-11 col-md-7 offest-md-2 offset-sm-1" style="width: 30rem; margin-top: 15rem;">
+                    <div class="card theme-cards">
                         <div class="card-body">
                             <h5 class="card-title mt-3"><b>Frozen in Time: It’s n~ice~ 🧊 to be back!</b></h5>
                             <p class="card-text mt-3">We are excited to welcome you to TechTogether New York 2022,
@@ -397,12 +397,10 @@
                           <ul class="socials">
                             <li><a href="https://www.instagram.com/techtogethernewyork/"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://www.facebook.com/techtogethernewyork"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://www.linkedin.com/company/techtogether-new-york/mycompany/"><i class="fa fa-linkedin"></i></a></li>
                           </ul>
                         </div>
             </div>
-    
         </footer>
         
     </section>
