working on calendar

--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
             <img src="./assets/dino-prints.png" alt="" id="dino-prints">
         </div>
 
+
+
+
         <!--    FAQ     -->
         <div class="my-5 section-padding">
             <h3 id="faq" class="text-center">No Dumb Questions</h3>
@@ -420,6 +423,11 @@
             </div>
         </div> -->
 
+        <!-- <div id="event-agenda"
+            data-ical-address="https://calendar.google.com/calendar/ical/f140bd2dd54725e2b2236b6b07d52e1b577ef7125abcc914b89d3a45c24d11e1%40group.calendar.google.com/public/basic.ics">
+        </div>
+        <script defer="defer" src="https://hackathon-schedule.netlify.app/static/js/main.js"></script>
+        <link href="https://hackathon-schedule.netlify.app/static/css/main.css" rel="stylesheet" /> -->
 
         <!--footer-->
         <div class="footer row">
